--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <!-- Tab 5: About -->
       <div id="tab5" class="tab-content">
         <h2>About Jarvis</h2>
-        <p>This is Jarvis your personal and proffessional Ai assistant.It's use for your daily tasks makes easier</p>
+        <p>Discover JARVIS, the AI assistant that handles your daily tasks with ease, helping you stay productive, organized, and ahead of schedule</p>
       </div>
 
     </main>
