--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>JARVIS Dashboard</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="loader.css" />
+  <link href src="loader.html" />
 </head>
 <body aria-label="JARVIS Dashboard" tabindex="0">
 
